// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputForm renders correctly 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform  normal"
  />
  <div
    className="error-message none"
  />
</form>
`;

exports[`InputForm renders error and message 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform error normal"
  />
  <div
    className="error-message "
  >
    Error message
  </div>
</form>
`;

exports[`InputForm renders focused input 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    autoFocus={true}
    className="inputform  normal"
  />
  <div
    className="error-message none"
  />
</form>
`;

exports[`InputForm renders input id 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform  normal"
    id="testid"
  />
  <div
    className="error-message none"
  />
</form>
`;

exports[`InputForm renders success 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform success normal"
  />
  <div
    className="error-message none"
  />
</form>
`;

exports[`InputForm renders value 1`] = `
<form>
  <div
    className="label"
  >
    Input
  </div>
  <input
    className="inputform  normal"
    value="textfortest"
  />
  <div
    className="error-message none"
  />
</form>
`;
